# readings

axum-server/: .env  .gitignore  Cargo.toml
axum-server/migrations/: 20250511095308_create_items_table.sql
axum-server/src/: errors.rs  main.rs  utils.rs
axum-server/src/logs/: logs.rs  mod.rs
axum-server/src/models/items/: handlers.rs  item.rs  mod.rs  router.rs
weapp/: package.json  pnpm-lock.yaml  project.config.json
weapp/config/: index.js
weapp/src/: app.config.ts  app.less  app.tsx
weapp/src/Components/Tabbar/: index.tsx
weapp/src/context/: LiteratureContext.tsx
weapp/src/pages/index/: index.tsx
weapp/src/pages/literatureList/: index.config.ts  index.tsx
weapp/src/pages/welcome/: index.config.ts  index.tsx
weapp/src/utils/: api.ts
