[package]
name = "axum-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "^0.8" # 请使用最新稳定版
tokio = { version = "1", features = ["full"] }
sqlx = { version = "^0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] } # 根据需要选择 features
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15" # 用于从 .env 文件加载环境变量
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }